[gd_scene load_steps=25 format=3 uid="uid://dt7ncp20c0wu8"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_nbtjk"]
[ext_resource type="PackedScene" uid="uid://yn36mi23b56d" path="res://models/shotgun/scene.gltf" id="2_8lf6c"]
[ext_resource type="Script" path="res://scripts/gun.gd" id="3_rqt5e"]
[ext_resource type="AudioStream" uid="uid://f0rib1546oja" path="res://audio/fire.wav" id="4_rdwwl"]
[ext_resource type="AudioStream" uid="uid://wmpjrdfktxqe" path="res://audio/kill.wav" id="5_mljan"]
[ext_resource type="AudioStream" uid="uid://sgiygsjuf0xe" path="res://audio/reload.wav" id="6_uab51"]
[ext_resource type="AudioStream" uid="uid://brwyo14f5xx17" path="res://audio/click.wav" id="7_hyga6"]
[ext_resource type="AudioStream" uid="uid://bq60yxsuk66rg" path="res://audio/footsteps/step1.wav" id="8_3dr02"]
[ext_resource type="AudioStream" uid="uid://eff0p4nb456q" path="res://audio/footsteps/step2.wav" id="9_p742x"]
[ext_resource type="AudioStream" uid="uid://bphh7keddthkq" path="res://audio/footsteps/step3.wav" id="10_5hniv"]
[ext_resource type="AudioStream" uid="uid://x2jy74laik5o" path="res://audio/footsteps/step4.wav" id="11_7y8aj"]
[ext_resource type="AudioStream" uid="uid://c44fqplfogxc3" path="res://audio/footsteps/step5.wav" id="12_d8ogm"]
[ext_resource type="AudioStream" uid="uid://fw2mkcyb0myc" path="res://audio/footsteps/step6.wav" id="13_a241x"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_a3kv4"]

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_o73kk"]
points = PackedVector3Array(-0.125207, -0.532801, -0.480507, 0.0227831, 0.47607, 0.498884, 0.169713, 0.559144, 0.464172, 0.231051, -0.803591, 0.320455, 0.40741, 0.651043, -0.243523, -0.482789, 0.594843, 0.0822132, -0.362868, -0.682312, 0.289697, 0.469044, -0.654529, -0.0662713, -0.127444, 0.842701, -0.338103, -0.393435, -0.683942, -0.244717, 0.438255, 0.623309, 0.200849, 0.0841477, 0.977454, 0.114795, -0.0682023, -0.976458, -0.12927, 0.20055, -0.563129, -0.451454, -0.185527, 0.595453, -0.453475, -0.273363, 0.592268, 0.407754, -0.00693649, -0.476823, 0.49966, 0.375821, -0.588614, 0.316955, 0.111579, 0.563059, -0.481177, -0.41725, 0.527866, -0.270497, -0.484546, -0.596972, -0.0665097, -0.279747, 0.908561, 0.0533361, -0.250197, -0.880712, 0.205319, 0.263647, -0.902771, -0.127394, 0.293368, 0.871526, -0.157196, 0.373412, -0.526319, -0.328246, 0.499663, 0.476641, -0.00688856, 0.0531056, 0.875001, 0.324703, -0.154543, -0.590854, 0.465879, -0.0972799, -0.782358, -0.398188, -0.387649, -0.498171, 0.31565, -0.30068, -0.587995, -0.388901)

[sub_resource type="Animation" id="Animation_b7ygw"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.69, -1.338, -1.502)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_3pqk5"]
resource_name = "aim"
length = 0.7
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.69, -1.338, -1.502), Vector3(0, -0.995, -1.257)]
}

[sub_resource type="Animation" id="Animation_170il"]
resource_name = "shoot"
length = 0.67
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.67),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.69, -1.338, -1.502), Vector3(0.69, -1.178, -1.267), Vector3(0.69, -1.338, -1.502)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.67),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.410152, 0, 0), Vector3(0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_pp7xw"]
resource_name = "shoot2"
length = 0.67
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.67),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.287979, 0, 0), Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.67),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, -1, -1.502), Vector3(0, -0.865, -1.277), Vector3(0, -1, -1.502)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s83er"]
_data = {
"RESET": SubResource("Animation_b7ygw"),
"aim": SubResource("Animation_3pqk5"),
"shoot": SubResource("Animation_170il"),
"shoot2": SubResource("Animation_pp7xw")
}

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_fsokd"]
vertex_color_use_as_albedo = true
albedo_color = Color(1, 1, 0, 1)
emission_enabled = true
emission = Color(0.972549, 0.960784, 0.490196, 1)
emission_energy_multiplier = 3.0
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_1tw8j"]
lifetime_randomness = 0.7
direction = Vector3(1.055, 0.095, 0)
spread = 30.0
initial_velocity_min = 10.0
initial_velocity_max = 20.0

[sub_resource type="QuadMesh" id="QuadMesh_y7cjh"]
size = Vector2(0.03, 0.05)

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_6inuk"]
streams_count = 6
stream_0/stream = ExtResource("8_3dr02")
stream_1/stream = ExtResource("9_p742x")
stream_2/stream = ExtResource("10_5hniv")
stream_3/stream = ExtResource("11_7y8aj")
stream_4/stream = ExtResource("12_d8ogm")
stream_5/stream = ExtResource("13_a241x")

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_nbtjk")

[node name="Player" type="MeshInstance3D" parent="."]
mesh = SubResource("CapsuleMesh_a3kv4")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("ConvexPolygonShape3D_o73kk")

[node name="Twist" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.704959, 0)

[node name="Pitch" type="Node3D" parent="Twist"]

[node name="RayCast3D" type="RayCast3D" parent="Twist/Pitch"]
transform = Transform3D(0.855, 0, 0, 0, -4.37114e-07, -0.855, 0, 10, -3.73732e-08, 0, 0, 0)
collision_mask = 8
collide_with_areas = true
collide_with_bodies = false

[node name="Camera3D" type="Camera3D" parent="Twist/Pitch"]
cull_mask = 1048573

[node name="Gun" parent="Twist/Pitch" instance=ExtResource("2_8lf6c")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.69, -1.338, -1.502)
script = ExtResource("3_rqt5e")

[node name="Skeleton3D" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0" index="0"]
bones/1/rotation = Quaternion(-0.530604, -5.29886e-17, 3.31705e-17, 0.84762)
bones/3/position = Vector3(-0.168489, 2.46707, -0.013553)
bones/4/position = Vector3(0.188267, 2.46616, -0.0160539)

[node name="Object_7" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="0"]
layers = 2

[node name="Object_8" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="1"]
layers = 2

[node name="Object_9" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="2"]
layers = 2

[node name="Object_11" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="3"]
layers = 2

[node name="Object_12" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="4"]
layers = 2

[node name="Object_13" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="5"]
layers = 2

[node name="Object_14" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="6"]
layers = 2

[node name="Object_16" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="7"]
layers = 2

[node name="Object_17" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="8"]
layers = 2

[node name="Object_18" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="9"]
layers = 2

[node name="Object_19" parent="Twist/Pitch/Gun/Sketchfab_model/root/GLTF_SceneRootNode/Armature_8/GLTF_created_0/Skeleton3D" index="10"]
layers = 2

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Twist/Pitch/Gun"]
libraries = {
"": SubResource("AnimationLibrary_s83er")
}

[node name="GPUParticles3D" type="GPUParticles3D" parent="Twist/Pitch/Gun"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -0.0899109, 0.8587, -1.24892)
material_override = SubResource("StandardMaterial3D_fsokd")
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
local_coords = true
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_1tw8j")
draw_pass_1 = SubResource("QuadMesh_y7cjh")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="Twist/Pitch/Gun"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.0816968, 0.8587, -1.24892)
material_override = SubResource("StandardMaterial3D_fsokd")
emitting = false
amount = 40
one_shot = true
explosiveness = 1.0
local_coords = true
draw_order = 3
process_material = SubResource("ParticleProcessMaterial_1tw8j")
draw_pass_1 = SubResource("QuadMesh_y7cjh")

[node name="fire" type="AudioStreamPlayer2D" parent="Twist/Pitch/Gun"]
stream = ExtResource("4_rdwwl")
volume_db = 10.0

[node name="kill" type="AudioStreamPlayer2D" parent="Twist/Pitch/Gun"]
stream = ExtResource("5_mljan")
volume_db = 10.0
panning_strength = 0.0

[node name="reload" type="AudioStreamPlayer2D" parent="Twist/Pitch/Gun"]
stream = ExtResource("6_uab51")
volume_db = 5.0

[node name="click" type="AudioStreamPlayer2D" parent="Twist/Pitch/Gun"]
stream = ExtResource("7_hyga6")
volume_db = 5.0

[node name="Step_sfx" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_6inuk")
volume_db = -30.0

[node name="GunOverlay" type="CanvasLayer" parent="."]

[node name="SubViewportContainer" type="SubViewportContainer" parent="GunOverlay"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SubViewport" type="SubViewport" parent="GunOverlay/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1080)
render_target_update_mode = 4

[node name="GunCamera" type="Camera3D" parent="GunOverlay/SubViewportContainer/SubViewport"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.705253, 0)
visible = false
cull_mask = 1047554

[editable path="Twist/Pitch/Gun"]
